fixes research spacing 11

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -257,5 +257,5 @@ p.research-date {
 }
 
 a.carousel-control {
-    padding-top: 20px;
+    top: 20px;
 }
